docs: update TextArea docs

--- a/packages/plasma-new-hope/src/components/TextArea/TextArea.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/TextArea/TextArea.template-doc.mdx
@@ -4,34 +4,155 @@ title: TextArea
 ---
 
 import { PropsTable, Description } from '@site/src/components';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # TextArea
 <Description name="TextArea" />
-<PropsTable name="TextArea" exclude={['$isFocused']} />
 
-## Использование
-Компонент `TextArea` может содержать иконку (или кнопку) справа.
-Для этого используйте свойство `contentRight`:
+### Быстрый старт
 
-```tsx live
-import React from 'react';
-import { TextArea } from '@salutejs/{{ package }}';
-import { IconDownload } from '@salutejs/plasma-icons';
+<Tabs>
+    <TabItem value="default" label="Uncontrolled" default>
+        ```tsx live
+        import React from 'react';
+        import { TextArea } from '@salutejs/{{ package }}';
+        import { IconDownload } from '@salutejs/plasma-icons';
 
-export function App() {
-    return (
-        <div>
-            <TextArea
-                placeholder="Положение иконки"
-                defaultValue="Справа"
-                contentRight={<IconDownload />}
-            />
-        </div>
-    );
-}
-```
+        export function App() {
+            return (
+                <div>
+                    <TextArea
+                        label="Uncontrolled TextArea"
+                        defaultValue="Дефолтное значение"
+                        placeholder="Введите значение"
+                        contentRight={<IconDownload />}
+                        view="default"
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value="controlled" label="Controlled">
+        ```tsx live
+        import React, { useState } from 'react';
+        import { TextArea } from '@salutejs/{{ package }}';
+        import { IconDownload } from '@salutejs/plasma-icons';
+
+        export function App() {
+            const [text, setText] = useState('Значение поля');
+
+            return (
+                <div>
+                    <TextArea
+                        value={text}
+                        onChange={(e: ChangeEvent<HTMLTextAreaElement>) => {
+                            setText(e.target.value);
+                        }}
+                        label="Controlled TextArea"
+                        placeholder="Введите значение"
+                        contentRight={<IconDownload />}
+                        view="default"
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+</Tabs>
+
+### Управление внешним видом
+
+Внешний вид компонента зависит от свойств `view`, `size`:
+
+<Tabs>
+    <TabItem value="view" label="View" default>
+        ```tsx live
+        import React from 'react';
+        import { TextArea } from '@salutejs/{{ package }}';
+        import { IconDownload } from '@salutejs/plasma-icons';
+
+        export function App() {
+            return (
+                <div style=\{{ display: 'flex', gap: '3rem', flexWrap: 'wrap'}}>
+                    <TextArea
+                        view="default"
+                        label="View default"
+                        placeholder="Введите значение"
+                        contentRight={<IconDownload />}
+                    />
+                    <TextArea
+                        view="positive"
+                        label="View positive"
+                        placeholder="Введите значение"
+                        contentRight={<IconDownload />}
+                    />
+                    <TextArea
+                        view="warning"
+                        label="View warning"
+                        placeholder="Введите значение"
+                        contentRight={<IconDownload />}
+                    />
+                    <TextArea
+                        view="negative"
+                        label="View negative"
+                        placeholder="Введите значение"
+                        contentRight={<IconDownload />}
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value="size" label="Size">
+        ```tsx live
+        import React from 'react';
+        import { TextArea } from '@salutejs/{{ package }}';
+        import { IconDownload } from '@salutejs/plasma-icons';
+
+        export function App() {
+            return (
+                <div style=\{{ display: 'flex', gap: '3rem', flexWrap: 'wrap'}}>
+                    <TextArea
+                        size="xl"
+                        label="Size xl"
+                        placeholder="Введите значение"
+                        contentRight={<IconDownload />}
+                    />
+                    <TextArea
+                        size="l"
+                        label="Size l"
+                        placeholder="Введите значение"
+                        contentRight={<IconDownload />}
+                    />
+                    <TextArea
+                        size="m"
+                        label="Size m"
+                        placeholder="Введите значение"
+                        contentRight={<IconDownload />}
+                    />
+                    <TextArea
+                        size="s"
+                        label="Size s"
+                        placeholder="Введите значение"
+                        contentRight={<IconDownload />}
+                    />
+                    <TextArea
+                        size="xs"
+                        label="Size xs"
+                        placeholder="Введите значение"
+                        contentRight={<IconDownload />}
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+</Tabs>
 
 ### Размеры компонента
+
 Высоту и ширину можно регулировать с помощью свойств `height` и `width`,
 указав значения в `rem` или соответствующие свойствам css значения.
 `height` и `width` отвечают за **всю** высоту и ширину компонента.
@@ -75,6 +196,7 @@ export function App() {
 ```
 
 ### Autoresize
+
 Также можно включить автоматическое регулирование высоты поля ввода по длине контента внутри (параметра `value`).
 Для этого необходимо использовать свойство `autoResize`.
 
@@ -104,7 +226,103 @@ export function App() {
 }
 ```
 
-### Clear
+### Подсказки
+
+Для вывода подсказки снизу от поля используйте свойство `leftHelper` и/или `rightHelper`,
+для подсказки в виде Tooltip - `hintText`, для подсказки сверху справа - `titleCaption`:
+
+```tsx live
+import React from 'react';
+import { TextArea } from '@salutejs/{{ package }}';
+
+export function App() {
+    return (
+        <div>
+            <TextArea
+                placeholder="Введите значение"
+                defaultValue="Значение"
+                leftHelper="Подсказка снизу слева"
+                rightHelper="Подсказка снизу справа"
+                titleCaption="Подсказка сверху"
+                hintText="Подсказка в виде Tooltip"
+                hintView="default"
+                hintSize="m"
+            />
+        </div>
+    );
+}
+```
+
+### Обязательность поля
+
+:::tip
+Наличие индикатора регулируется свойством `hasRequiredIndicator`.
+:::
+
+Обязательность поля задаётся с помощью свойства `required`.
+Если поле является обязательным, то у компонента появляется специальный индикатор.
+Изменить расположение индикатора можно с помощью свойства `requiredPlacement`, которое принимает значения `left` и `right`.
+
+```tsx live
+import React from 'react';
+import { TextArea } from '@salutejs/{{ package }}';
+import { IconDownload } from '@salutejs/plasma-icons';
+
+export function App() {
+    return (
+        <div>
+            <TextArea
+                hasRequiredIndicator
+                required
+                requiredPlacement="right"
+                label="Лейбл"
+                leftHelper="Подсказка к полю"
+                placeholder="Введите значение"
+                contentRight={<IconDownload />}
+            />
+        </div>
+    );
+}
+```
+
+### Слот для контента над вводимым текстом
+
+Слот для контента над вводимым текстом задается с помощью свойства `headerSlot`:
+
+```tsx live
+import React from 'react';
+import { TextArea, TextS } from '@salutejs/{{ package }}';
+import { surfaceSolid03 } from '@salutejs/plasma-tokens-b2c';
+
+export function App() {
+    const HeaderSlot = () => (
+       <div style=\{{ margin: "0 0.75rem", padding: "0.5rem 0", borderBottom: `0.063rem solid ${surfaceSolid03}` }}>
+           <TextS>Дополнительный контент</TextS>
+       </div>
+    )
+
+    return (
+        <div>
+            <TextArea
+                headerSlot={<HeaderSlot />}
+                placeholder="Введите значение"
+                defaultValue="Значение"
+                leftHelper="Подсказка снизу слева"
+            />
+        </div>
+    );
+}
+```
+
+### Таблица свойств
+<PropsTable name="TextArea" exclude={['$isFocused']} />
+
+### Clear (DEPRECATED)
+
+:::warning
+Свойство `clear` устарело. Используйте вместо этого `appearance="clear"`.
+:::
+
 На отображение TextArea влияют свойства `clear` и `hasDivider`.
 При этом `hasDivider` не может использоваться без `clear`.
 Свойства `minAuto`, `maxAuto`, `autoResize`, `rows` и `cols`, `height` и `width` игнорируются.
@@ -127,93 +345,6 @@ export function App() {
                 }}
                 clear
                 hasDivider
-            />
-        </div>
-    );
-}
-```
-
-### Подсказка
-Для вывода подсказки снизу от поля используйте свойство `leftHelper` и/или `rightHelper`,
-для подсказки в виде Tooltip - `hasHint`, для подсказки сверху справа - `titleCaption`:
-
-```tsx live
-import React from 'react';
-import { TextArea } from '@salutejs/{{ package }}';
-
-export function App() {
-    return (
-        <div>
-            <TextArea
-                placeholder="Введите значение"
-                defaultValue="Значение"
-                leftHelper="Подсказка снизу слева"
-                rightHelper="Подсказка снизу справа"
-                hasHint
-                hintText="Подсказка в виде Tooltip"
-                hintView="default"
-                hintSize="m"
-            />
-        </div>
-    );
-}
-```
-
-
-### Обязательность поля
-
-:::tip
-Наличие индикатора регулируется свойством `hasRequiredIndicator`.
-:::
-
-Обязательность поля задаётся с помощью свойств `required` и `requiredPlacement`.
-
-Где `requiredPlacement` отвечает за выравнивание и принимает значения `"left"` и `"right"`:
-
-```tsx live
-import React from 'react';
-import { TextArea } from '@salutejs/{{ package }}';
-
-export function App() {
-    return (
-        <div>
-            <TextArea
-                placeholder="Введите значение"
-                required
-            />
-            <TextArea
-                placeholder="Введите значение"
-                label="Заголовок"
-                required
-                requiredPlacement="right"
-            />
-        </div>
-    );
-}
-```
-
-### Слот для контента над вводимым текстом
-Слот для контента над вводимым текстом задается с помощью свойства `headerSlot`:
-
-```tsx live
-import React from 'react';
-import { TextArea, TextS } from '@salutejs/{{ package }}';
-import { surfaceTransparentTertiary } from '@salutejs/plasma-themes/tokens';
-
-export function App() {
-    const HeaderSlot = () => (
-       <div style=\{{ margin: "0 0.75rem", padding: "0.5rem 0", borderBottom: `0.063rem solid ${surfaceTransparentTertiary}` }}>
-           <TextS>Дополнительный контент</TextS>
-       </div>
-    )
-
-    return (
-        <div>
-            <TextArea
-                headerSlot={<HeaderSlot />}
-                placeholder="Введите значение"
-                defaultValue="Значение"
-                leftHelper="Подсказка снизу слева"
             />
         </div>
     );
