--- a/website/plasma-web-docs/docs/components/Autocomplete.mdx
+++ b/website/plasma-web-docs/docs/components/Autocomplete.mdx
@@ -254,7 +254,7 @@ type SuggestionItem = {
             const onScroll = async (e) => {
                 if (isInfiniteLoading) return
 
-                if (e.target.scrollTop + e.target.offsetHeight + 10 > e.target.scrollHeight) {
+                if (e.currentTarget.scrollTop + e.currentTarget.offsetHeight + 10 > e.currentTarget.scrollHeight) {
                     setIsInfiniteLoading(true)
 
                     const res = await getData(mockData, suggestions.page + 1, 10)
