docs(numberInput): fix typo [PLASMA-6339]

--- a/website/sdds-crm-docs/docs/components/NumberInput.mdx
+++ b/website/sdds-crm-docs/docs/components/NumberInput.mdx
@@ -6,7 +6,7 @@ title: NumberInput
 import { PropsTable, Description } from '@site/src/components';
 
 # NumberInput
-Числовое поле. Поддерживает как ручной ввод, так и увеличение/уменьшение значения, 
+Числовое поле. Поддерживает как ручной ввод, так и увеличение/уменьшение значения,
 посредством нажатия соответствующих кнопок.
 
 ## NumberInput
@@ -18,13 +18,13 @@ import { PropsTable, Description } from '@site/src/components';
 ### Контролируемый NumberInput:
 
 ```tsx live
-import React from 'react';
+import React, { useState } from 'react';
 import { NumberInput } from '@salutejs/sdds-crm';
 
 export function App() {
-    const [value, setValue] = useState<number | string | undefined>(5);
-    
-    const handleChange = (_: any, newValue: number | string | undefined) => {
+    const [value, setValue] = useState(5);
+
+    const handleChange = (_, newValue) => {
         setValue(newValue);
     };
 
@@ -34,6 +34,7 @@ export function App() {
         </div>
     );
 }
+```
 
 ### Вид числового поля
 Вид числового поля задается с помощью свойства `view`:
@@ -143,7 +144,7 @@ export function App() {
 ```
 
 ### Кастомные иконки для кнопок
-Можно установить собственную иконку для кнопки используя 
+Можно установить собственную иконку для кнопки используя
 свойства `decrementIcon` и `incrementIcon` соответственно:
 
 ```tsx live
@@ -154,10 +155,10 @@ import { IconVolumeLevel1Fill, IconVolumeLevel2Fill } from '@salutejs/plasma-ico
 export function App() {
     return (
         <div>
-            <NumberInput 
-                size="l" 
-                incrementIcon={<IconVolumeLevel2Fill color="inherit"/>} 
-                decrementIcon={<IconVolumeLevel1Fill color="inherit"/>} 
+            <NumberInput
+                size="l"
+                incrementIcon={<IconVolumeLevel2Fill color="inherit"/>}
+                decrementIcon={<IconVolumeLevel1Fill color="inherit"/>}
                 width={188}
             />
         </div>
@@ -166,7 +167,7 @@ export function App() {
 ```
 
 ### Кастомные кнопки увеличения/уменьшения значения
-Можно установить собственные кнопки используя свойства `customDecrementButton` и `customIncrementButton`. 
+Можно установить собственные кнопки используя свойства `customDecrementButton` и `customIncrementButton`.
 В таком случае нужно определить функции по уменьшению/увелечению значения в поле.
 
 ```tsx live
@@ -196,7 +197,7 @@ export function App() {
     };
 
     const CustomIncrementButton = () => (
-        <IconButton 
+        <IconButton
             view={currentValue !== max ? "accent" : "critical"}
             size="l"
             disabled={currentValue === max}
@@ -207,7 +208,7 @@ export function App() {
     )
 
     const CustomDecrementButton = () => (
-        <IconButton 
+        <IconButton
             view={currentValue !== min ? "accent" : "critical"}
             size="l"
             disabled={currentValue === min}
@@ -219,11 +220,11 @@ export function App() {
 
     return (
         <div>
-            <NumberInput 
+            <NumberInput
                 value={currentValue}
                 step={step}
-                size="l" 
-                customIncrementButton={<CustomIncrementButton />} 
+                size="l"
+                customIncrementButton={<CustomIncrementButton />}
                 customDecrementButton={<CustomDecrementButton />}
                 width={188}
             />
