--- a/website/sdds-platform-ai-docs/docs/components/List.mdx
+++ b/website/sdds-platform-ai-docs/docs/components/List.mdx
@@ -6,7 +6,7 @@ title: List
 import { PropsTable } from '@site/src/components';
 
 # List
-Компонент ячейки.
+Компонент списка
 
 <PropsTable name="List" />
 
@@ -31,7 +31,7 @@ export function App() {
             <List view="default" size="m" variant="normal">
                 <ListItem contentRight={<IconChevronRight color="inherit" size="xs" />}>Test Item 1</ListItem>
                 <ListItem contentRight={<IconChevronRight color="inherit" size="xs" />}>Test Item 2</ListItem>
-                <ListItem contentRight={<IconChevronRight color="inherit" size="xs" />} disabled>
+                <ListItem disabled contentRight={<IconChevronRight color="inherit" size="xs" />}>
                     Test Item 3
                 </ListItem>
                 <ListItem contentRight={<IconChevronRight color="inherit" size="xs" />}>Test Item 4</ListItem>
