--- a/website/sdds-dfa-docs/docs/components/Segment.mdx
+++ b/website/sdds-dfa-docs/docs/components/Segment.mdx
@@ -4,73 +4,213 @@ title: Segment
 ---
 
 import { PropsTable, Description } from '@site/src/components';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # Segment
 Набор компонентов для создания группы сегментов.
 Структура для сегментов похожа на структуру маркированных списков.
 
-## SegmentGroup
-
-<Description name="SegmentGroup" />
-<PropsTable name="SegmentGroup"  exclude={['css', 'selectedView']} />
-
-## SegmentItem
-
-<Description name="SegmentItem" />
-<PropsTable name="SegmentItem"  exclude={['css', 'filledBackground', 'disabled']} />
-
-### Провайдер контекста
+### Быстрый старт
 
 Оберните в `SegmentProvider` компонент, в котором будут использованы SegmentGroup с SegmentItem.
 Внутри данного провайдера есть доступ к хуку `useSegment`.
 
-### Выбранные по умолчанию SegmentItem
+<Tabs>
+    <TabItem value="uncontrolled" label="Uncontrolled" default>
+        Можно задать выбранные по умолчанию сегменты с помощью свойства `defaultSelected`.
+        Оно передается в `SegmentProvider`, в виде массива `value` элементов.
 
-Можно задать выбранные по умолчанию сегменты с помощью свойства `defaultSelected`.
-Оно передается в `SegmentProvider`, в виде массива `value` элементов.
+        ```tsx live
+        import React from 'react';
+        import { SegmentGroup, SegmentItem, SegmentProvider, useSegment } from '@salutejs/sdds-dfa';
 
-```tsx live
-import React from 'react';
-import { SegmentGroup, SegmentItem, SegmentProvider, useSegment } from '@salutejs/sdds-dfa';
+        export function App() {
+            const items = Array(4).fill(0);
 
-export function App() {
-    const items = Array(8).fill(0);
+            const SegmentTemplate = () => {
+                const {selectedSegmentItems} = useSegment();
 
-    const SegmentTemplate = () => {
-        const {selectedSegmentItems} = useSegment();
+                return (
+                    <>
+                        <div>Выбранный элемент: {selectedSegmentItems.join(', ')}</div>
+                        <br />
+                        <SegmentGroup hasBackground pilled clip={false}>
+                            {items.map((_, i) => (
+                                <SegmentItem
+                                    label={`Label ${i}`}
+                                    value={`label_${i}`}
+                                    key={`label_${i}`}
+                                    view='default'
+                                    pilled
+                                />
+                            ))}
+                        </SegmentGroup>
+                    </>
+                )
+            }
 
-        return (
-            <>
-                <div>Выбранный элемент: {selectedSegmentItems.join(', ')}</div>
-                <br />
-                <SegmentGroup hasBackground pilled clip={false}>
-                    {items.map((_, i) => (
-                        <SegmentItem
-                            label={`Label ${i}`}
-                            value={`label_${i}`}
-                            key={`label_${i}`}
-                            view='default'
-                            pilled
-                        />
-                    ))}
-                </SegmentGroup>
-            </>
-        )
-    }
+            return (
+                <div style={{ display: "block" }} >
+                    <SegmentProvider defaultSelected={['label_1']}>
+                        <SegmentTemplate/>
+                    </SegmentProvider>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value="controlled" label="Controlled">
+        Для управляемого режима используйте свойства `selected` и `onChangeSelected`.
 
-    return (
-        <div style={{ display: "block" }} >
-            <SegmentProvider defaultSelected={['label_1']}>
-                <SegmentTemplate/>
-            </SegmentProvider>
-        </div>
-    );
-}
-```
+        ```tsx live
+        import React, { useState } from 'react';
+        import { SegmentGroup, SegmentItem, SegmentProvider, useSegment } from '@salutejs/sdds-dfa';
+
+        export function App() {
+            const items = Array(4).fill(0);
+            const [selected, setSelected] = useState(['label_1']);
+
+            const handleChangeSelected = (selectedLabel) => {
+                setSelected((prevState) => {
+                    const newState = [...prevState];
+                    const existingIndex = prevState.indexOf(selectedLabel);
+
+                    if (existingIndex !== -1) {
+                        newState.splice(existingIndex, 1);
+                    } else {
+                        newState.push(selectedLabel);
+                    }
+
+                    return newState;
+                });
+            };
+
+            const SegmentTemplate = () => {
+                const {selectedSegmentItems} = useSegment();
+
+                return (
+                    <>
+                        <div>Выбранный элемент: {selectedSegmentItems.join(', ')}</div>
+                        <br />
+                        <SegmentGroup hasBackground pilled clip={false}>
+                            {items.map((_, i) => (
+                                <SegmentItem
+                                    label={`Label ${i}`}
+                                    value={`label_${i}`}
+                                    key={`label_${i}`}
+                                    view='default'
+                                    pilled
+                                />
+                            ))}
+                        </SegmentGroup>
+                    </>
+                )
+            }
+
+            return (
+                <div style={{ display: "block" }} >
+                    <SegmentProvider selected={selected} onChangeSelected={handleChangeSelected}>
+                        <SegmentTemplate/>
+                    </SegmentProvider>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+</Tabs>
+
+### Управление внешним видом
+
+<Tabs>
+    <TabItem value="orientation" label="Orientation" default>
+        Для смены ориентации передаем `orientation: 'vertical'`
+
+        ```tsx live
+        import React from 'react';
+        import { SegmentGroup, SegmentItem, SegmentProvider, useSegment } from '@salutejs/sdds-dfa';
+
+        export function App() {
+            const items = Array(4).fill(0);
+
+            const SegmentTemplate = () => {
+                const {selectedSegmentItems} = useSegment();
+
+                return (
+                    <>
+                        <div>Выбранный элемент: {selectedSegmentItems.join(', ')}</div>
+                        <br />
+                        <SegmentGroup orientation="vertical" hasBackground clip={false}>
+                            {items.map((_, i) => (
+                                <SegmentItem
+                                    label={`Label ${i}`}
+                                    value={`label_${i}`}
+                                    key={`label_${i}`}
+                                    view='secondary'
+                                />
+                            ))}
+                        </SegmentGroup>
+                    </>
+                )
+            }
+
+            return (
+                <div style={{ display: "block" }} >
+                    <SegmentProvider defaultSelected={['label_1']}>
+                        <SegmentTemplate/>
+                    </SegmentProvider>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value="pilled" label="Pilled">
+        Для скругленных углов используйте свойство `pilled`
+
+        ```tsx live
+        import React from 'react';
+        import { SegmentGroup, SegmentItem, SegmentProvider, useSegment } from '@salutejs/sdds-dfa';
+
+        export function App() {
+            const items = Array(4).fill(0);
+
+            const SegmentTemplate = () => {
+                const {selectedSegmentItems} = useSegment();
+
+                return (
+                    <>
+                        <div>Выбранный элемент: {selectedSegmentItems.join(', ')}</div>
+                        <br />
+                        <SegmentGroup hasBackground pilled clip={false}>
+                            {items.map((_, i) => (
+                                <SegmentItem
+                                    label={`Label ${i}`}
+                                    value={`label_${i}`}
+                                    key={`label_${i}`}
+                                    view='default'
+                                    pilled
+                                />
+                            ))}
+                        </SegmentGroup>
+                    </>
+                )
+            }
+
+            return (
+                <div style={{ display: "block" }} >
+                    <SegmentProvider defaultSelected={['label_1']}>
+                        <SegmentTemplate/>
+                    </SegmentProvider>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+</Tabs>
 
 ### Обязательный активный SegmentItem
 
-С помощью свойства `singleSelectedRequired` задается поведение, 
+С помощью свойства `singleSelectedRequired` задается поведение,
 при котором один сегмент должен быть активным.
 
 ```tsx live
@@ -78,7 +218,7 @@ import React from 'react';
 import { SegmentGroup, SegmentItem, SegmentProvider, useSegment } from '@salutejs/sdds-dfa';
 
 export function App() {
-    const items = Array(8).fill(0);
+    const items = Array(4).fill(0);
 
     const SegmentTemplate = () => {
         const {selectedSegmentItems} = useSegment();
@@ -112,44 +252,14 @@ export function App() {
 }
 ```
 
-### Вертикальное отображение
+## Таблица свойств
 
-Для смены ориентации передаем `orientation: 'vertical'`
+### SegmentGroup
 
-```tsx live
-import React from 'react';
-import { SegmentGroup, SegmentItem, SegmentProvider, useSegment } from '@salutejs/sdds-dfa';
+<Description name="SegmentGroup" />
+<PropsTable name="SegmentGroup" exclude={['css', 'selectedView']} />
 
-export function App() {
-    const items = Array(8).fill(0);
+### SegmentItem
 
-    const SegmentTemplate = () => {
-        const {selectedSegmentItems} = useSegment();
-
-        return (
-            <>
-                <div>Выбранный элемент: {selectedSegmentItems.join(', ')}</div>
-                <br />
-                <SegmentGroup orientation="vertical" hasBackground clip={false}>
-                    {items.map((_, i) => (
-                        <SegmentItem
-                            label={`Label ${i}`}
-                            value={`label_${i}`}
-                            key={`label_${i}`}
-                            view='secondary'
-                        />
-                    ))}
-                </SegmentGroup>
-            </>
-        )
-    }
-
-    return (
-        <div style={{ display: "block" }} >
-            <SegmentProvider defaultSelected={['label_1']}>
-                <SegmentTemplate/>
-            </SegmentProvider>
-        </div>
-    );
-}
-```
+<Description name="SegmentItem" />
+<PropsTable name="SegmentItem" exclude={['css', 'filledBackground', 'disabled']} />
