--- a/website/sdds-finai-docs/docs/components/DatePicker.mdx
+++ b/website/sdds-finai-docs/docs/components/DatePicker.mdx
@@ -151,7 +151,6 @@ import TabItem from '@theme/TabItem';
 ### Управление внешним видом
 
 Размер `DatePicker` задаётся с помощью свойства `size`.
-Возможные значения свойства: `"l"`, `"m"`, `"s"`, `"xs"`.
 
 ```tsx live
 import React from 'react';
@@ -640,7 +639,7 @@ import { DatePicker } from '@salutejs/sdds-finai';
         import { IconDone } from '@salutejs/plasma-icons';
 
         export function App() {
-            const sizes = ['l', 'm', 's', 'xs']
+            const sizes = ['xl', 'l', 'm', 's', 'xs']
 
             const ActionButton = () => {
                 return (
